# extsort

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  chunk.hpp  config.hpp  divider.hpp  file.cpp  file.hpp  main.cpp  merger.hpp  sorter.hpp
test/: CMakeLists.txt  file_test.cpp  samplefile.txt  test.cpp
test/assets/: b.txt  merged.txt  samplefile.sorted.txt
tools/: build_and_compare_with_sort.sh  generate_big_file.py
